# cli/resume_meta_data_model.go
@@ -1,0 +1,305 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package cli
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"fmt"
+
+	"github.com/ChristopherScot/resume/models"
+	"github.com/go-openapi/strfmt"
+	"github.com/spf13/cobra"
+)
+
+// Schema cli for ResumeMetaData
+
+// register flags to command
+func registerModelResumeMetaDataFlags(depth int, cmdPrefix string, cmd *cobra.Command) error {
+
+	if err := registerResumeMetaDataCreated(depth, cmdPrefix, cmd); err != nil {
+		return err
+	}
+
+	if err := registerResumeMetaDataID(depth, cmdPrefix, cmd); err != nil {
+		return err
+	}
+
+	if err := registerResumeMetaDataTags(depth, cmdPrefix, cmd); err != nil {
+		return err
+	}
+
+	if err := registerResumeMetaDataUpdated(depth, cmdPrefix, cmd); err != nil {
+		return err
+	}
+
+	if err := registerResumeMetaDataUser(depth, cmdPrefix, cmd); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func registerResumeMetaDataCreated(depth int, cmdPrefix string, cmd *cobra.Command) error {
+	if depth > maxDepth {
+		return nil
+	}
+
+	createdDescription := ``
+
+	var createdFlagName string
+	if cmdPrefix == "" {
+		createdFlagName = "created"
+	} else {
+		createdFlagName = fmt.Sprintf("%v.created", cmdPrefix)
+	}
+
+	_ = cmd.PersistentFlags().String(createdFlagName, "", createdDescription)
+
+	return nil
+}
+
+func registerResumeMetaDataID(depth int, cmdPrefix string, cmd *cobra.Command) error {
+	if depth > maxDepth {
+		return nil
+	}
+
+	idDescription := ``
+
+	var idFlagName string
+	if cmdPrefix == "" {
+		idFlagName = "id"
+	} else {
+		idFlagName = fmt.Sprintf("%v.id", cmdPrefix)
+	}
+
+	_ = cmd.PersistentFlags().String(idFlagName, "", idDescription)
+
+	return nil
+}
+
+func registerResumeMetaDataTags(depth int, cmdPrefix string, cmd *cobra.Command) error {
+	if depth > maxDepth {
+		return nil
+	}
+
+	// warning: tags map[string]string map type is not supported by go-swagger cli yet
+
+	return nil
+}
+
+func registerResumeMetaDataUpdated(depth int, cmdPrefix string, cmd *cobra.Command) error {
+	if depth > maxDepth {
+		return nil
+	}
+
+	updatedDescription := ``
+
+	var updatedFlagName string
+	if cmdPrefix == "" {
+		updatedFlagName = "updated"
+	} else {
+		updatedFlagName = fmt.Sprintf("%v.updated", cmdPrefix)
+	}
+
+	_ = cmd.PersistentFlags().String(updatedFlagName, "", updatedDescription)
+
+	return nil
+}
+
+func registerResumeMetaDataUser(depth int, cmdPrefix string, cmd *cobra.Command) error {
+	if depth > maxDepth {
+		return nil
+	}
+
+	userDescription := ``
+
+	var userFlagName string
+	if cmdPrefix == "" {
+		userFlagName = "user"
+	} else {
+		userFlagName = fmt.Sprintf("%v.user", cmdPrefix)
+	}
+
+	var userFlagDefault string
+
+	_ = cmd.PersistentFlags().String(userFlagName, userFlagDefault, userDescription)
+
+	return nil
+}
+
+// retrieve flags from commands, and set value in model. Return true if any flag is passed by user to fill model field.
+func retrieveModelResumeMetaDataFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	retAdded := false
+
+	err, createdAdded := retrieveResumeMetaDataCreatedFlags(depth, m, cmdPrefix, cmd)
+	if err != nil {
+		return err, false
+	}
+	retAdded = retAdded || createdAdded
+
+	err, idAdded := retrieveResumeMetaDataIDFlags(depth, m, cmdPrefix, cmd)
+	if err != nil {
+		return err, false
+	}
+	retAdded = retAdded || idAdded
+
+	err, tagsAdded := retrieveResumeMetaDataTagsFlags(depth, m, cmdPrefix, cmd)
+	if err != nil {
+		return err, false
+	}
+	retAdded = retAdded || tagsAdded
+
+	err, updatedAdded := retrieveResumeMetaDataUpdatedFlags(depth, m, cmdPrefix, cmd)
+	if err != nil {
+		return err, false
+	}
+	retAdded = retAdded || updatedAdded
+
+	err, userAdded := retrieveResumeMetaDataUserFlags(depth, m, cmdPrefix, cmd)
+	if err != nil {
+		return err, false
+	}
+	retAdded = retAdded || userAdded
+
+	return nil, retAdded
+}
+
+func retrieveResumeMetaDataCreatedFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	if depth > maxDepth {
+		return nil, false
+	}
+	retAdded := false
+
+	createdFlagName := fmt.Sprintf("%v.created", cmdPrefix)
+	if cmd.Flags().Changed(createdFlagName) {
+
+		var createdFlagName string
+		if cmdPrefix == "" {
+			createdFlagName = "created"
+		} else {
+			createdFlagName = fmt.Sprintf("%v.created", cmdPrefix)
+		}
+
+		createdFlagValueStr, err := cmd.Flags().GetString(createdFlagName)
+		if err != nil {
+			return err, false
+		}
+		var createdFlagValue strfmt.DateTime
+		if err := createdFlagValue.UnmarshalText([]byte(createdFlagValueStr)); err != nil {
+			return err, false
+		}
+		m.Created = createdFlagValue
+
+		retAdded = true
+	}
+
+	return nil, retAdded
+}
+
+func retrieveResumeMetaDataIDFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	if depth > maxDepth {
+		return nil, false
+	}
+	retAdded := false
+
+	idFlagName := fmt.Sprintf("%v.id", cmdPrefix)
+	if cmd.Flags().Changed(idFlagName) {
+
+		var idFlagName string
+		if cmdPrefix == "" {
+			idFlagName = "id"
+		} else {
+			idFlagName = fmt.Sprintf("%v.id", cmdPrefix)
+		}
+
+		idFlagValueStr, err := cmd.Flags().GetString(idFlagName)
+		if err != nil {
+			return err, false
+		}
+		var idFlagValue strfmt.UUID
+		if err := idFlagValue.UnmarshalText([]byte(idFlagValueStr)); err != nil {
+			return err, false
+		}
+		m.ID = idFlagValue
+
+		retAdded = true
+	}
+
+	return nil, retAdded
+}
+
+func retrieveResumeMetaDataTagsFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	if depth > maxDepth {
+		return nil, false
+	}
+	retAdded := false
+
+	tagsFlagName := fmt.Sprintf("%v.tags", cmdPrefix)
+	if cmd.Flags().Changed(tagsFlagName) {
+		// warning: tags map type map[string]string is not supported by go-swagger cli yet
+	}
+
+	return nil, retAdded
+}
+
+func retrieveResumeMetaDataUpdatedFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	if depth > maxDepth {
+		return nil, false
+	}
+	retAdded := false
+
+	updatedFlagName := fmt.Sprintf("%v.updated", cmdPrefix)
+	if cmd.Flags().Changed(updatedFlagName) {
+
+		var updatedFlagName string
+		if cmdPrefix == "" {
+			updatedFlagName = "updated"
+		} else {
+			updatedFlagName = fmt.Sprintf("%v.updated", cmdPrefix)
+		}
+
+		updatedFlagValueStr, err := cmd.Flags().GetString(updatedFlagName)
+		if err != nil {
+			return err, false
+		}
+		var updatedFlagValue strfmt.DateTime
+		if err := updatedFlagValue.UnmarshalText([]byte(updatedFlagValueStr)); err != nil {
+			return err, false
+		}
+		m.Updated = updatedFlagValue
+
+		retAdded = true
+	}
+
+	return nil, retAdded
+}
+
+func retrieveResumeMetaDataUserFlags(depth int, m *models.ResumeMetaData, cmdPrefix string, cmd *cobra.Command) (error, bool) {
+	if depth > maxDepth {
+		return nil, false
+	}
+	retAdded := false
+
+	userFlagName := fmt.Sprintf("%v.user", cmdPrefix)
+	if cmd.Flags().Changed(userFlagName) {
+
+		var userFlagName string
+		if cmdPrefix == "" {
+			userFlagName = "user"
+		} else {
+			userFlagName = fmt.Sprintf("%v.user", cmdPrefix)
+		}
+
+		userFlagValue, err := cmd.Flags().GetString(userFlagName)
+		if err != nil {
+			return err, false
+		}
+		m.User = userFlagValue
+
+		retAdded = true
+	}
+
+	return nil, retAdded
+}
