# models/resume_metadata.go
@@ -1,0 +1,102 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ResumeMetadata resume metadata
+//
+// swagger:model ResumeMetadata
+type ResumeMetadata struct {
+
+	// created
+	// Format: date-time
+	Created strfmt.DateTime `json:"created,omitempty"`
+
+	// tags
+	// Example: {"key1":"value1","key2":"value2"}
+	Tags map[string]string `json:"tags,omitempty"`
+
+	// updated
+	// Format: date-time
+	Updated strfmt.DateTime `json:"updated,omitempty"`
+
+	// user
+	// Example: John Doe
+	User string `json:"user,omitempty"`
+}
+
+// Validate validates this resume metadata
+func (m *ResumeMetadata) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreated(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdated(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ResumeMetadata) validateCreated(formats strfmt.Registry) error {
+	if swag.IsZero(m.Created) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("created", "body", "date-time", m.Created.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *ResumeMetadata) validateUpdated(formats strfmt.Registry) error {
+	if swag.IsZero(m.Updated) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("updated", "body", "date-time", m.Updated.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this resume metadata based on context it is used
+func (m *ResumeMetadata) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ResumeMetadata) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ResumeMetadata) UnmarshalBinary(b []byte) error {
+	var res ResumeMetadata
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
